--- a/src/view/layout/head-common.html
+++ b/src/view/layout/head-common.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="UTF-8">
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta name="keywords" content="happymmall,电商">
+    <meta name="description" content="happymmall电商平台开发教程">
 </head>
