--- a/src/page/common/header/index.css
+++ b/src/page/common/header/index.css
@@ -2,7 +2,7 @@
  * @Author: haobrother 
  * @Date: 2019-07-28 16:34:08 
  * @Last Modified by: haobrother
- * @Last Modified time: 2019-07-28 17:08:15
+ * @Last Modified time: 2019-07-30 18:16:22
  */
 /* 通用头部导航 */
 .header .logo{
@@ -13,6 +13,7 @@
     font-size: 36px;
     color: #c60023;
     font-weight: bold;
+    text-decoration: none;
 }
 .header .search-con{
     padding: 40px 0 30px 250px;
@@ -30,4 +31,14 @@
     position: absolute;
     height: 44px;
     width: 80px;
+}
+/* 面包屑导航 */
+.crumb{
+    margin-bottom: 15px;
+    height: 50px;
+    line-height: 50px;
+    background: #eee;
+    color: #888;
+    font-size: 14px;
+    border-top: 2px solid #c60023;
 }
