--- a/src/page/common/nav-simple/index.css
+++ b/src/page/common/nav-simple/index.css
@@ -2,7 +2,7 @@
  * @Author: haobrother 
  * @Date: 2019-07-28 11:33:56 
  * @Last Modified by: haobrother
- * @Last Modified time: 2019-07-28 11:44:37
+ * @Last Modified time: 2019-07-30 18:19:59
  */
 .nav-simple{
     height: 60px;
@@ -14,4 +14,5 @@
     font-size: 26px;
     font-weight: bold;
     color: #c60023;
+    text-decoration: none;
 }
