--- a/src/view/layout/nav-simple.html
+++ b/src/view/layout/nav-simple.html
@@ -1,5 +1,5 @@
 <div class="nav-simple">
     <div class="w">
-        <a class="logo">MMall</a>
+        <a href="./index.html" class="logo">MMall</a>
     </div>
 </div>
