--- a/src/page/common/layout.css
+++ b/src/page/common/layout.css
@@ -2,7 +2,7 @@
  * @Author: haobrother 
  * @Date: 2019-07-27 23:29:44 
  * @Last Modified by: haobrother
- * @Last Modified time: 2019-07-30 21:31:05
+ * @Last Modified time: 2019-08-03 12:15:40
  */
 /* css reset */
 *{
@@ -90,6 +90,7 @@ input[type='checkbox']{
     outline: none;
     cursor: pointer;
     text-decoration: none;
+    text-align: center;
 }
 .btn-mini{
     height: 25px;
