--- a/src/view/order-list.html
+++ b/src/view/order-list.html
@@ -24,7 +24,12 @@
                 <div class="panel">
                     <div class="panel-title"><%= htmlWebpackPlugin.options.title %></div>
                     <div class="panel-body">
-                        <div class="loading"></div>
+                        <div class="order-list-con">
+                            
+                        </div>
+                        <div class="pagination">
+                            
+                        </div>
                     </div>
                 </div>
             </div>
