--- a/src/view/about.html
+++ b/src/view/about.html
@@ -19,17 +19,11 @@
             </div>
         </div>
         <div class="page-wrap w">
-            <%= require('html-loader!./layout/nav-side.html') %>
-            <div class="content with-nav">
+            <div class="panel">
                 <div class="panel">
-                    <div class="panel-title"><%= htmlWebpackPlugin.options.title %></div>
+                    <h1 class="panel-title">关于我们</h1>
                     <div class="panel-body">
-                        <div class="order-list-con">
-                            
-                        </div>
-                        <div class="pagination">
-                            
-                        </div>
+                        欢迎访问happymmall。这是一个点上教学演示网站。
                     </div>
                 </div>
             </div>
