添加百度统计代码

--- a/src/view/layout/head-common.html
+++ b/src/view/layout/head-common.html
@@ -6,3 +6,12 @@
 <link rel="dns-prefetch" href="//cdn.bootcss.com">
 <link rel="dns-prefetch" href="//s.happymmall.com">
 <link rel="dns-prefetch" href="//img.happymmall.com">
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?1f98ea7dcaa73da0989c18f8c6b129fd";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
