更新优化界面的显示、打包脚本以及favicon

--- a/src/view/layout/footer.html
+++ b/src/view/layout/footer.html
@@ -1,9 +1,6 @@
 <div class="footer">
     <div class="w">
         <div class="links">
-            <a href="http://www.imooc.com" class="link" target="_blank">
-            慕课网
-            </a> |
             <a href="https://www.baidu.com" class="link" target="_blank">
             百度
             </a> |
@@ -15,7 +12,7 @@
             </a>
         </div>
         <p class="copyright">
-            Copyright  ©  2019 happymmal.com All Rights Reserved.
+            Copyright  ©  2019 haobrother.top All Rights Reserved.
         </p>
     </div>
 </div>
