--- a/src/view/about.html
+++ b/src/view/about.html
@@ -2,7 +2,7 @@
 <html lang="zh">
     <head>
         <%= require('html-loader!./layout/head-common.html') %>
-        <title><%= htmlWebpackPlugin.options.title %> - MMall电商平台</title>
+        <title><%= htmlWebpackPlugin.options.title %> - HaoMall电商平台</title>
     </head>
     <body>
         <%= require('html-loader!./layout/nav.html') %>
@@ -10,7 +10,7 @@
         <div class="crumb">
             <div class="w">
                 <div class="crumb-con">
-                    <a href="./index.html" class="link">MMall</a>
+                    <a href="./index.html" class="link">HaoMall</a>
                     <span>></span>
                     <span class="link-text">
                         <%= htmlWebpackPlugin.options.title %>
@@ -23,7 +23,7 @@
                 <div class="panel">
                     <h1 class="panel-title">关于我们</h1>
                     <div class="panel-body">
-                        欢迎访问happymmall。这是一个点上教学演示网站。
+                        欢迎访问HaoMmall。
                     </div>
                 </div>
             </div>
