--- a/src/view/detail.html
+++ b/src/view/detail.html
@@ -2,7 +2,7 @@
 <html lang="zh">
     <head>
         <%= require('html-loader!./layout/head-common.html') %>
-        <title><%= htmlWebpackPlugin.options.title %> - MMall电商平台</title>
+        <title><%= htmlWebpackPlugin.options.title %> - HaoMall电商平台</title>
     </head>
     <body>
         <%= require('html-loader!./layout/nav.html') %>
@@ -10,7 +10,7 @@
         <div class="crumb">
             <div class="w">
                 <div class="crumb-con">
-                    <a href="./index.html" class="link">MMall</a>
+                    <a href="./index.html" class="link">HaoMall</a>
                     <span>></span>
                     <span class="link-text">
                         <%= htmlWebpackPlugin.options.title %>
