--- a/src/view/layout/nav.html
+++ b/src/view/layout/nav.html
@@ -24,10 +24,10 @@
                 <a href="./order-list.html" class="link">我的订单</a>
             </li>
             <li class="nav-item">
-                <a href="./user-center.html" class="link">我的MMall</a>
+                <a href="./user-center.html" class="link">我的HaoMall</a>
             </li>
             <li class="nav-item">
-                <a href="./about.html" class="link">关于MMall</a>
+                <a href="./about.html" class="link">关于HaoMall</a>
             </li>
         </ul>
     </div>
